added new design patterns